Add production alert rules and Telegram notifications

--- a/charts/values-kube-prometheus-stack.yaml
+++ b/charts/values-kube-prometheus-stack.yaml
@@ -49,7 +49,8 @@ defaultRules:
 alertmanager:
   enabled: true
   alertmanagerSpec:
-    storage:
+   configSecret: alertmanager-config
+   storage:
       volumeClaimTemplate:
         spec:
           accessModes: ["ReadWriteOnce"]
